Metrics report. Work in progress

--- a/main/django-app/templates/main.html
+++ b/main/django-app/templates/main.html
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
         <div class="w3-dropdown-content w3-card-4 w3-bar-block">
           <!-- Add your two submenu options here -->
           <a href="api/exportmetrics" class="w3-bar-item w3-button">Export metrics as excel</a>
-          <a href="api/exportmetrics" class="w3-bar-item w3-button">Download analysis as word and latex</a>
+          <a href="api/generatemetrics" class="w3-bar-item w3-button">Download analysis as word and latex</a>
         </div>
       </div>
       <a href="logout" class="w3-bar-item w3-button">Logout</a>
