--- a/main/django-app/templates/main.html
+++ b/main/django-app/templates/main.html
@@ -122,6 +122,7 @@ h1, h2, h3, h4, h5, h6 {
           <a href="api/generatemetrics" class="w3-bar-item w3-button">Download analysis as word and latex</a>
         </div>
       </div>
+      <a href="https://forensicvm-autopsy-plugin-user-manual.readthedocs.io/en/latest/" target="_blank" class="w3-bar-item w3-button">Help</a>
       <a href="logout" class="w3-bar-item w3-button">Logout</a>
     </div>
   </div>
